--- a/Case_1/case_1/src/Pages/Login.css
+++ b/Case_1/case_1/src/Pages/Login.css
@@ -1,25 +1,28 @@
+.booff-logga{
+  display: block;
+  width: 10rem;
+  margin: auto;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   margin: auto;
   margin-top: 7%;
   width: 36rem;
-  /* width: 30vw; */
-  background: #333;
+  background: rgb(199, 199, 199);
   padding-bottom: 2%;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.35);
 }
 
 .header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.46rem;
-  width: 100%;
-  margin-top: 30px;
+  width: 20rem;
+  margin: auto;
 }
 
 .text {
-  color: #c0f6ff;
+  text-align: center;
+  color: rgb(0, 0, 0);
   font-size: 48px;
   font-weight: 700;
 }
@@ -27,7 +30,7 @@
 .underline{
   width: 4.6rem;
   height: 0.38rem;
-  background: #c0f6ff;
+  background: rgb(0, 0, 0);
   border-radius: 9px;
 }
 
@@ -35,7 +38,7 @@
   margin-top: 9.8%;
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 1.5rem;
 }
 
 .input {
@@ -44,10 +47,10 @@
   margin: auto;
   width: 26rem;
   height: 5.4rem;
-  background-color: rgba(20, 20, 20, 0.5);
+  background-color: rgba(160, 160, 160, 0.5);
   border-radius: 6px;
   text-align: center;
-  border: solid 2px #c0edff;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.35);
 }
 
 .input img {
@@ -60,25 +63,12 @@
   background: transparent;
   border: none;
   outline: none;
-  color: #797979;
+  color: black;
   font-size: 19px;
-}
-
-.forgot-password {
-  margin-left: 10.7%;
-  margin-top: 4.6%;
-  color: #797979;
-  font-size: 18px;
-}
-
-.forgot-password span {
-  color: #c0f6ff;
-  cursor: pointer;
 }
 
 .submit-container {
   display: flex;
-  gap: 30px;
   margin: 10% auto;
 }
 
@@ -95,9 +85,9 @@
   text-align-last: center;
   height: 4rem;
   width: 8rem;
-  color: #c0f6ff;
-  border: solid 2px #c0edff;
-  background-color: rgba(20, 20, 20);
+  color: rgb(0, 0, 0);
+  border: solid 2px rgb(0, 0, 0);
+  background-color: rgba(160, 160, 160);
   border-radius: 50px;
   font-size: 19px;
   cursor: pointer;
@@ -110,9 +100,9 @@
   margin: auto;
   width: 9rem;
   height: 3.6rem;
-  color: #c0f6ff;
-  border: solid 2px #c0edff;
-  background-color: rgba(20, 20, 20, 0.5);
+  color: rgb(0, 0, 0);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.35);
+  background-color: rgba(160, 160, 160, 0.5);
   border-radius: 50px;
   font-size: 19px;
   font-weight: 700;
