--- a/Case_1/case_1/src/Pages/Login.css
+++ b/Case_1/case_1/src/Pages/Login.css
@@ -35,7 +35,8 @@
 }
 
 .inputs {
-  margin-top: 9.8%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -46,11 +47,10 @@
   align-items: center;
   margin: auto;
   width: 26rem;
-  height: 5.4rem;
-  background-color: rgba(160, 160, 160, 0.5);
-  border-radius: 6px;
-  text-align: center;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.35);
+  height: 2.5rem;
+  box-shadow: 0 2px rgba(0, 0, 0, 0.35);
+  padding: 1rem;
+  align-items: baseline;
 }
 
 .input img {
@@ -102,7 +102,7 @@
   height: 3.6rem;
   color: rgb(0, 0, 0);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.35);
-  background-color: rgba(160, 160, 160, 0.5);
+  background-color: rgba(165, 165, 165, 0.5);
   border-radius: 50px;
   font-size: 19px;
   font-weight: 700;
