--- a/Case_1/case_1/src/Pages/matchOverview.css
+++ b/Case_1/case_1/src/Pages/matchOverview.css
@@ -56,3 +56,47 @@
   padding: 0.25rem;
   box-shadow: 0 2px rgba(0, 0, 0, 0.35);
 }
+
+.match-form_2{
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.match-link_2{
+  text-decoration: none;
+  color: black;
+  font-size: 2rem;
+  width: fit-content;
+  padding: 0.25rem;
+  margin: auto;
+  box-shadow: 0 2px rgba(0, 0, 0, 0.35);
+}
+
+.match-date_2{
+  font-size: 2rem;
+  padding: 0.25rem;
+  margin: auto;
+  width: fit-content;
+  box-shadow: 0 2px rgba(0, 0, 0, 0.35);
+}
+
+.match-location_2{
+  font-size: 2rem;
+  width: 10rem;
+  width: fit-content;
+  padding: 0.25rem;
+  margin: auto;
+  box-shadow: 0 2px rgba(0, 0, 0, 0.35);
+}
+
+.match-field_2{
+  font-size: 2rem;
+  width: 10rem;
+  padding: 0.25rem;
+  width: fit-content;
+  margin: auto;
+  box-shadow: 0 2px rgba(0, 0, 0, 0.35);
+}
