--- a/Case_1/case_1/src/Pages/assignref.css
+++ b/Case_1/case_1/src/Pages/assignref.css
@@ -4,39 +4,42 @@
     padding: 20px;
   }
   
-  .form {
+  .ref_form {
     display: flex;
     flex-direction: column;
     gap: 15px;
   }
   
-  h1 {
+  .refheader {
     text-align: center;
     margin-bottom: 20px;
   }
   
-  label {
+  .reflabel {
     display: block;
     font-size: 16px;
     margin-bottom: 5px;
   }
   
-  select,
-  button {
+  .refselect {
     font-size: 14px;
     padding: 8px;
     width: 100%;
     box-sizing: border-box;
   }
   
-  button {
+  .refbutton {
+    font-size: 14px;
+    padding: 8px;
+    width: 100%;
+    box-sizing: border-box;
     background-color: #4caf50;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
   }
   
-  button:hover {
+  .refbutton:hover {
     background-color: #45a049;
   }
   
