--- a/Case_1/case_1/src/Components/Header.css
+++ b/Case_1/case_1/src/Components/Header.css
@@ -4,10 +4,10 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: rgb(199, 199, 199);
   position: sticky;
   top: 0;
-  border-bottom: solid 1px #c0edff;
+  border-bottom: solid 1px #99092C;
 }
 
 .links li{
@@ -16,14 +16,14 @@
 
 .links li a {
     display: block;
-    color: #c0f6ff;
+    color: #99092C;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 .links li a:hover:not(.active) {
-    background-color: #111;
+    background-color: rgb(180, 180, 180);
 }
 
 .link {
@@ -32,14 +32,14 @@
 
 .link a {
   display: block;
-  color: #c0f6ff;
+  color: #99092C;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 .link a:hover:not(.active) {
-  background-color: #111;
+  background-color: rgb(215, 215, 215);
 }
 
 .active {
