--- a/Case_1/case_1/src/Pages/Login.css
+++ b/Case_1/case_1/src/Pages/Login.css
@@ -2,13 +2,14 @@
   display: block;
   width: 10rem;
   margin: auto;
+  margin-top: 2rem;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   margin: auto;
-  margin-top: 7%;
+  margin-top: 2rem;
   width: 36rem;
   background: rgb(199, 199, 199);
   padding-bottom: 2%;
@@ -30,6 +31,8 @@
 .underline{
   width: 4.6rem;
   height: 0.38rem;
+  margin: auto;
+  margin-top: 1rem;
   background: rgb(0, 0, 0);
   border-radius: 9px;
 }
@@ -107,6 +110,11 @@
   font-size: 19px;
   font-weight: 700;
   cursor: pointer;
+  border: none;
+}
+
+.submit:hover {
+  background-color: #99092C;
 }
 
 @media screen and (max-width: 600px) {
@@ -123,6 +131,59 @@
   .input input {
     width: 16rem;
     font-size: 15px;
+  }
+  .role{
+    height: 3rem;
+    width: 6rem;
+    font-size: 15px;
+  }
+  
+  .submit{
+    width: 6rem;
+    height: 2.5rem;
+    font-size: 15px;
+  }
+
+}
+
+@media screen and (max-width: 460px) {
+
+  .booff-logga{
+    display: block;
+    width: 7rem;
+    margin: auto;
+    margin-top: 2rem;
+  }
+  
+  .text {
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-size: 38px;
+    font-weight: 600;
+  }
+
+  .underline{
+    width: 3.6rem;
+    height: 0.24rem;
+    margin: auto;
+    margin-top: 1rem;
+    background: rgb(0, 0, 0);
+    border-radius: 10px;
+  }
+
+  .container {
+    width: 20rem;
+    height: 26rem;
+  }
+  
+  .input {
+    width: 13rem;
+    height: 2.5rem;
+  }
+  
+  .input input {
+    width: 10rem;
+    font-size: 13px;
   }
   .role{
     height: 3rem;
