--- a/Case_1/case_1/src/Pages/overview.css
+++ b/Case_1/case_1/src/Pages/overview.css
@@ -1,20 +1,74 @@
 /* overview.css */
 
 .overview-container {
-    display: flex;
-    justify-content: space-around;
-  }
+  margin: 1rem;
+  /* display: flex; */
+  justify-content: space-around;
+}
   
-  .column {
-    flex: 1;
-    margin: 20px;
-  }
+.column {
+  flex: 1;
+  /* margin: 1rem; */
+}
+
+.card {
+  border: 0.1rem solid #ccc;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  /* border:  solid #0d0606; */
+}
+
+.table tr {
+  /* background-color: #e1e1e1; */
+  border: 1px solid #0d0606;
+  /* height: 1.8rem; */
+}
+
+.table td {
+  padding:0.2rem;
+  border: 1px solid #000000;
+}
+
+
+
+.selectButton {
+  color: #99092C;
+  padding: 0.3rem;
+  border: 0.1rem solid;
+  background-color: #d7d7d7;
   
-  .card {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
-  
-  /* Add more styling as needed */
-  
+}
+
+.selectButton:hover {
+  /* color: #dddddd; */
+  background-color: rgb(192, 192, 192);
+  /* border-color: #000000; */
+}
+
+.buttonHolder {
+  display: flex;
+  /* border-color: #000000; */
+  /* justify-content: space-between; */
+  /* margin: 1rem; */
+}
+
+.editButtonHolder {
+  width: 5rem;
+}
+
+.editButton {
+  width: 100%;
+  height: 100%;
+  background-color: #d7d7d7;
+  border: 0.1rem groove;
+}
+
+.editButton:hover {
+  background-color: #99092C;
+}
