big changes to several systems

--- a/Case_1/case_1/src/Components/headers/individualHeaders/header.css
+++ b/Case_1/case_1/src/Components/headers/individualHeaders/header.css
@@ -46,6 +46,16 @@
   background-color: #04AA6D;
 }
 
+.account {
+  /* float: right; */
+  /* align-self: flex-end; */
+  /* margin-left: auto; */
+  /* justify-self: flex-end; */
+  /* flex-flow: row-reverse; */
+  /* flex: 1; */
+  justify-self: flex-end;
+}
+
 @media screen and (max-width: 600px) {
   .links {
     flex-direction: column;
