last minute changes

--- a/Case_1/src/Components/headers/individualHeaders/header.css
+++ b/Case_1/src/Components/headers/individualHeaders/header.css
@@ -44,8 +44,8 @@
 }
 
 .active {
-  /* background-color: rgb(153, 9, 44, 0.3); */
-  border: #99092C 2px solid;
+  background-color: rgb(153, 9, 44, 0.3);
+  border: #8e5765 2px solid;
 }
 
 .account {
